<resources>
    <string name="app_name">App</string>
    <string name="facebook_app_id">1118874444808766</string>
    <string name="google_api_key">AIzaSyA8SQnBoNts5HaBHUW0EiaAYqg0qrWe358</string>

    <!-- Login Screen -->
    <string name="link_signup">¿Aún no estás registrado?</string>
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="error_email_login">ingrese un correo válido</string>
    <string name="error_password_login">debe estar entre 4 y 10 caracteres</string>

    <!-- Resgristracion Screen -->
    <string name="btn_signup">Crear cuenta</string>
    <string name="name">Nombre</string>
    <string name="link_login">¿Ya tienes un usuario?</string>
     <string name="error_name_sigunp">al menos 3 caracteres</string>

    <!-- Resgristracion Datos Personales Screen -->
    <string name="telefono">Teléfono</string>
    <string name="provincia">Provincia</string>
    <string name="ciudad">Ciudad</string>
    <string name="direccion">Dirección</string>
    <string name="zipcode">Código Postal</string>
    <string name="save">Guardar</string>
    <string name="error_telefono_sigunp">entre 8 y 15 números</string>
    <string name="error_direccion_sigunp">ingrese una dirección valida</string>
    <string name="error_zipcode_sigunp">ingrese 4 números</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_adopcion">AdopcionActivity</string>
    <string name="title_activity_perdido">PerdidoActivity</string>
    <string name="title_activity_adopcion_publicar">AdopcionPublicarActivity</string>
    <string name="title_activity_adopcion_buscar">AdopcionBuscarActivity</string>
    <string name="title_activity_perdido_publicar">PerdidoPublicarActivity</string>
    <string name="title_activity_perdido_buscar">PerdidoBuscarActivity</string>
    <string name="title_activity_regitrar_datos_cuenta">RegitrarDatosCuentaActivity</string>
    <string name="title_activity_registrar_datos_personales">RegistrarDatosPersonalesActivity</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="volver_pantalla_anterior_button">Volver</string>
    <string name="adopcion_principal_publicar_adopcion">Publicar</string>
    <string name="adopcion_principal_buscar_adopcion">Buscar</string>

    <string name="cerrar_sesion_button">Salir</string>
    <string name="adopciones_button">Adopciones</string>
    <string name="mascotas_perdidas_button">Perdidas</string>
    <string name="editar_perfil_button">Editar Perfil</string>
    <string name="bienvenida_default">Bienvenido!!</string>

    <string name="home_image_dog_cat">Home</string>
    <string name="adoptar_image_button">Adoptar Mascotas</string>
    <string name="perdidas_image_button">Mascotas Perdidas</string>

    <string name="title_adoptar_pantalla_principal">En Adopción</string>
</resources>
