<LinearLayout
    android:orientation="vertical"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:background="@color/fondo_base"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/barra_navegacion">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cerrar_sesion_button"
            android:textColor="@color/texto_boton"
            android:id="@+id/btn_salir"
            android:layout_margin="10dp"
            android:background="@color/fondo_boton"
            android:clickable="true" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="10"
            android:background="@android:color/transparent"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/editar_perfil_button"
            android:textColor="@color/texto_boton"
            android:background="@color/fondo_boton"
            android:id="@+id/btn_editar_perfil"
            android:clickable="true" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="10dp">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="7"
            android:layout_margin="10dp"
            android:id="@+id/home_imageView"
            android:scaleType="fitCenter"
            android:contentDescription="@string/home_image_dog_cat"
            android:src="@mipmap/home_perros_y_gatos" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="10"
            android:background="@android:color/transparent"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/bienvenida_default"
            android:textColor="@color/texto_boton"
            android:gravity="center"
            android:textSize="25sp"
            android:textAlignment="center"
            android:id="@+id/welcome_text" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="10"
            android:background="@android:color/transparent"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:src="@mipmap/adoptar_button"
                android:scaleType="fitCenter"
                android:contentDescription="@string/adoptar_image_button" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/adopciones_button"
                android:textColor="@color/texto_boton"
                android:textSize="20sp"
                android:id="@+id/btn_adoptar"
                android:background="@color/fondo_boton"
                android:clickable="true" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:src="@mipmap/buscar_button"
                android:scaleType="fitCenter"
                android:contentDescription="@string/perdidas_image_button"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/mascotas_perdidas_button"
                android:textColor="@color/texto_boton"
                android:textSize="20sp"
                android:background="@color/fondo_boton"
                android:id="@+id/btn_notificar_mascota_perdida"
                android:clickable="true" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>