<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="bottom"
    android:background="@color/fondo_base"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/barra_navegacion">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/volver_pantalla_anterior_button"
            android:layout_margin="5dp"
            android:layout_gravity="center_vertical"
            android:id="@+id/btn_volver"
            android:textColor="@color/texto_boton"
            android:clickable="true"
            android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha"
            android:background="@color/fondo_base"
            android:adjustViewBounds="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/title_adoptar_pantalla_principal"
            android:textColor="@color/texto_boton"
            android:textSize="25sp"
            android:id="@+id/textView" />

    </LinearLayout>

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:id="@+id/listView" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:background="@color/barra_navegacion">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/adopcion_principal_buscar_adopcion"
            android:id="@+id/btn_buscar"
            android:clickable="true"
            android:textSize="15sp"
            android:textAlignment="center"
            android:background="@color/fondo_boton"
            android:textColor="@color/texto_boton"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/adopcion_principal_publicar_adopcion"
            android:id="@+id/btn_publicar"
            android:textAlignment="center"
            android:clickable="true"
            android:textColor="@color/texto_boton"
            android:textSize="15sp"
            android:background="@color/fondo_boton" />

    </LinearLayout>

</LinearLayout>
